Fixed layout issue

--- a/_assets/scss/_custom.scss
+++ b/_assets/scss/_custom.scss
@@ -466,7 +466,7 @@ footer {
 		padding: 2em 0;
 		left: 50%;
 		transform: translateX(-50%);
-		min-width: 600px;
+		//min-width: 600px;
 	}
 
 	.fixedFooter-C { 
